--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@ header {
   background-color: #006400;
 }
 
+h1 {
+  text-align: center;
+}
+
 .container {
   width: 80%;
   margin: 0 auto;
@@ -73,6 +77,7 @@ nav a:hover::before {
 
 main {
   height: 100vh;
+  margin-top: 5em;
 }
 
 footer {
@@ -82,4 +87,19 @@ footer {
 
 .mini {
   padding: 1em 0;
+}
+
+.ul-with-squares {
+  list-style-type: square;
+}
+
+.keynoteSpeakers {
+  padding: 2em;
+  background-color: #c0c0c0;
+  overflow: none;
+}
+
+.profile-pic {
+  float: left;
+  margin-right: 20px;
 }
